I have almost everyting about the first version done.. this commit is way too big

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.oh5.baash.littlebitofeverything"
+        applicationId "com.oh5.baash.tinymonsters"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
