--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.oh5.baash.littlebitofeverything" >
+    package="com.oh5.baash.tinymonsters" >
+
+    <!--uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" -->
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -19,13 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Kindy"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_patterns"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
-        </activity>
-        <activity
-            android:name=".Kindy2"
+            android:name=".Level1"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_patterns"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
